--- a/FRONT-END/src/app/modules/clients/clients.component.html
+++ b/FRONT-END/src/app/modules/clients/clients.component.html
@@ -1,7 +1,6 @@
 <!-- PLANTILLA CRUD -->
-<app-crud [Module]="'Clientes'" [items]="filteredClients" [columns]="columns" [canDelete]="false" [canExport]="true" [canSeeDetail]="true"
-  [canChangeStatus]="true" [showStateColumn]="true" [statusField]="'estadoCliente'" (create)="openCreateModal()"
-  (export)="exportClients()" (edit)="openEditModal($event)" (detail)="openHistoryModal($event)"
+<app-crud [Module]="'Clientes'" [items]="filteredClients" [columns]="columns" [canDelete]="false" [canExport]="false" [canSeeDetail]="true"
+  [canChangeStatus]="true" [showStateColumn]="true" [statusField]="'estadoCliente'" (create)="openCreateModal()" (edit)="openEditModal($event)" (detail)="openHistoryModal($event)"
   (search)="searchClients($event)" (statusChange)="changeClientStatus($event)">
 </app-crud>
 
@@ -66,28 +65,24 @@
   </ng-template>
 </p-dialog>
 
-<p-dialog [(visible)]="showHistoryModal" [style]="{width: '80vw'}" [modal]="true" [resizable]="false"
-  [draggable]="false">
-  <ng-template pTemplate="header">
-    Historial de Crédito
-  </ng-template>
-  <ng-template pTemplate="content">
-    <p-table [value]="historyItems" [paginator]="true" [rows]="10">
+<!-- HISTORIAL DE CRÉDITO -->
 
+<p-dialog [(visible)]="showHistoryModal" [style]="{width: '80vw'}" [modal]="true" [header]="'Historial de Crédito'" class="p-fluid">
+  <ng-template pTemplate="content">
+    <p-table [value]="historyItems" [paginator]="true" [rows]="10" [first]="currentPageIndex" (onPage)="updatePageIndex($event)">
       <ng-template pTemplate="header">
         <tr>
-          <th>Fecha</th>
-          <th>Tipo</th>
-          <th>Estado</th>
-          <th>Monto</th>
-          <th>Saldo</th>
+          <th class="text-center" style="width: 15%;">Fecha</th>
+          <th class="text-center" style="width: 15%;">Tipo</th>
+          <th class="text-center" style="width: 15%;">Monto</th>
+          <th class="text-center" style="width: 15%;">Saldo</th>
         </tr>
       </ng-template>
 
       <ng-template pTemplate="body" let-item>
         <tr [ngClass]="{'anulado-row': item.tipo === 'Abono' && item.estadoAbono === false}">
-          <td>{{item.fecha | date:'short'}}</td>
-          <td>
+          <td class="text-center">{{item.fecha | date:'short'}}</td>
+          <td class="text-center">
             <span [ngClass]="{
               'abono-chip': item.tipo === 'Abono', 
               'cargo-chip': item.tipo === 'Abono' && item.estadoAbono === false,
@@ -96,16 +91,21 @@
               {{item.tipo}}
             </span>
           </td>
-          <td>
-            <ng-container *ngIf="item.tipo === 'Abono'">
-              {{item.estadoAbono ? 'Activo' : 'Anulado'}}
-            </ng-container>
-          </td>
-          <td>{{item.monto | currency}}</td>
-          <td>{{item.saldo | currency}}</td>
+          <td class="text-center">{{item.monto | currency}}</td>
+          <td class="text-center">{{item.saldo | currency}}</td>
         </tr>
       </ng-template>
-
     </p-table>
+  </ng-template>
+
+  <ng-template pTemplate="footer">
+    <div class="modal-footer">
+      <button pButton pRipple 
+              label="Descargar Historial" 
+              icon="pi pi-download"
+              class="p-button-help p-button-rounded p-button-outlined" 
+              (click)="downloadCreditHistory()">
+      </button>
+    </div>
   </ng-template>
 </p-dialog>
