--- a/FRONT-END/src/app/layout/sidebar/sidebar.component.html
+++ b/FRONT-END/src/app/layout/sidebar/sidebar.component.html
@@ -1,12 +1,12 @@
 <nav class="sidebar" [ngClass]="{'open': isSidebarVisible, 'collapsed': !isSidebarVisible}">
   <div class="mt-5">
     <ul>
-      <li class="item" routerLink="/index" routerLinkActive="active">
+      <!-- <li class="item" routerLink="/index" routerLinkActive="active">
         <i class="bi bi-house mr-2" style="color:#C62828;"></i><a>Inicio</a>
-      </li>
+      </li> -->
 
       <li class="item" routerLink="/dashboard" routerLinkActive="active">
-        <i class="pi pi-chart-bar mr-2" style="color:#e61cb3;"></i><a>Dashboard</a>
+        <i class="pi pi-chart-bar mr-2" style="color:#C62828;"></i><a>Dashboard</a>
       </li>
 
       <li>
