--- a/FRONT-END/src/app/modules/categories/categories.component.html
+++ b/FRONT-END/src/app/modules/categories/categories.component.html
@@ -26,7 +26,7 @@
             <!-- pa mostrar los campos al frenta -->
             <div class="field-group">
                 <div class="field" [ngClass]="{'error': isFieldInvalid('nombreCategoria')}">
-                    <label for="nombreCategoria">Nombre Categoría</label>
+                    <label for="nombreCategoria">Nombre Categoría <span style="color: red;">*</span></label>
                     <input type="text" pInputText id="nombreCategoria" formControlName="nombreCategoria" required
                         maxlength="20" autofocus />
                     <small class="p-error" *ngIf="isFieldInvalid('nombreCategoria')">
