--- a/FRONT-END/src/app/Auth/restore/restore.component.html
+++ b/FRONT-END/src/app/Auth/restore/restore.component.html
@@ -1,7 +1,7 @@
-<div class="min-h-screen bg-gradient-to-br from-green-100 to-blue-100 flex items-center justify-center">
+<div class="min-h-screen bg-gradient-to-br from-blue-100 to-blue-100 flex items-center justify-center">
   <div class="bg-white bg-opacity-90 backdrop-blur-md rounded-lg shadow-2xl p-8 max-w-md w-full space-y-8 tarjeta">
     <div class="text-center">
-      <div class="bg-green-500 rounded-full p-3 inline-block">
+      <div class="bg-blue-500 rounded-full p-3 inline-block">
         <i class="fas fa-shield-alt text-white icono-escudo"></i>
       </div>
       <h2 class="mt-6 text-2xl font-extrabold text-gray-900">Restablecer Contraseña</h2>
@@ -13,7 +13,7 @@
         <!-- Campo de nueva contraseña -->
         <div class="relative">
           <label for="newPassword" class="text-sm font-medium text-gray-700">Nueva Contraseña</label>
-          <div class="flex items-center border border-gray-300 rounded-md focus-within:ring-2 focus-within:ring-green-600">
+          <div class="flex items-center border border-gray-300 rounded-md focus-within:ring-2 focus-within:ring-blue-600">
             <div class="pl-3">
               <i class="fas fa-lock text-gray-400"></i>
             </div>
@@ -40,7 +40,7 @@
         <!-- Campo de confirmar contraseña -->
         <div class="relative">
           <label for="confirmPassword" class="text-sm font-medium text-gray-700">Confirmar Contraseña</label>
-          <div class="flex items-center border border-gray-300 rounded-md focus-within:ring-2 focus-within:ring-green-600">
+          <div class="flex items-center border border-gray-300 rounded-md focus-within:ring-2 focus-within:ring-blue-600">
             <div class="pl-3">
               <i class="fas fa-lock text-gray-400"></i>
             </div>
@@ -65,7 +65,7 @@
         </div>
       </div>
 
-      <button type="submit" class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-md transition duration-300 ease-in-out transform hover:scale-105">
+      <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-md transition duration-300 ease-in-out transform hover:scale-105">
         Restablecer 
       </button>
     </form>
