--- a/FRONT-END/src/app/Auth/restore/restore.component.css
+++ b/FRONT-END/src/app/Auth/restore/restore.component.css
@@ -96,7 +96,7 @@ i {
 
 /* Botón de restablecer */
 button {
-  background-color: #48bb78;
+  background-color: #3B82F6;
   color: white;
   font-weight: bold;
   padding: 12px;
@@ -107,6 +107,6 @@ button {
 }
 
 button:hover {
-  background-color: #38a169;
+  background-color: #3B82F6;
   transform: scale(1.05);
 }
