--- a/FRONT-END/src/app/modules/return-provider/return-provider.component.html
+++ b/FRONT-END/src/app/modules/return-provider/return-provider.component.html
@@ -28,7 +28,7 @@
 
             <div class="field-group">
                 <div class="field" [ngClass]="{'error': isFieldInvalid('idProveedor')}">
-                    <label for="proveedor">Proveedores</label>
+                    <label for="proveedor">Proveedores<span style="color: #E24C4C;">*</span></label>
                     <div class="p-inputgroup">
                         <p-dropdown [options]="providers" formControlName="idProveedor" optionLabel="nombreProveedor"
                             optionValue="idProveedor" placeholder="Seleccionar proveedor" [virtualScroll]="true"
@@ -43,7 +43,7 @@
             </div>
             <div class="field-group">
                 <div class="field" [ngClass]="{'error': isFieldInvalid('CodigoProducto')}">
-                    <label for="CodigoProducto">Codigo Barra</label>
+                    <label for="CodigoProducto">Codigo Barra<span style="color: #E24C4C;">*</span></label>
                     <input type="text" pInputText id="CodigoProducto" formControlName="CodigoProducto" required />
                     <small class="p-error" *ngIf="isFieldInvalid('CodigoProducto')">
                         {{ getErrorMessage('CodigoProducto') }}
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="field" [ngClass]="{'error': isFieldInvalid('cantidad')}">
-                    <label for="cantidad">cantidad</label>
+                    <label for="cantidad">cantidad<span style="color: #E24C4C;">*</span></label>
                     <input type="text" pInputText id="cantidad" formControlName="cantidad" required />
                     <small class="p-error" *ngIf="isFieldInvalid('cantidad')">
                         {{ getErrorMessage('cantidad') }}
@@ -60,7 +60,7 @@
             </div>
 
             <div class="field" [ngClass]="{'error': isFieldInvalid('motivoDevolucion')}">
-                <label for="motivoDevolucion">Motivo</label>
+                <label for="motivoDevolucion">Motivo<span style="color: #E24C4C;">*</span></label>
                 <input type="text" pInputText id="motivoDevolucion" formControlName="motivoDevolucion" required />
                 <small class="p-error" *ngIf="isFieldInvalid('motivoDevolucion')">
                     {{ getErrorMessage('motivoDevolucion') }}
