--- a/FRONT-END/src/app/modules/detailSale/detail-sale.component.html
+++ b/FRONT-END/src/app/modules/detailSale/detail-sale.component.html
@@ -5,9 +5,6 @@
 <app-crud [Module]="'Resumen de Ventas'" 
 [items]="filteredSale" 
 [columns]="colums" 
-[startDate]="startDates"
-[endDate]="endDates"
-[calendar]="false"
 [canDelete]="false"
 [canExport]="true" 
 [canEdit]="false" 
@@ -16,6 +13,9 @@
 (cancel)="cancelSale($event)"
 [canSeeDetail]="true" 
 [canStatus]="true" 
+[calendar]="true"
+(calendarField1)="setStartDate($event)"
+(calendarField2)="setEndDate($event)"
 [showStateColumn]="true" 
 [statusField]="'estadoVenta'"
 (detail)="openShowModal($event)" 
