--- a/FRONT-END/src/app/shared/crud/crud.component.html
+++ b/FRONT-END/src/app/shared/crud/crud.component.html
@@ -6,10 +6,10 @@
       <button *ngIf="canExport" pButton pRipple label="Descargar" icon="pi pi-download"
         class="p-button-help p-button-rounded p-button-outlined" (click)="onExport()"></button>
 <div *ngIf="calendar">
- <p-calendar [(ngModel)]="startDate" [showIcon]="true" [dateFormat]="'dd/mm/yy'" placeholder="Fecha de inicio"></p-calendar>
-<p-calendar [(ngModel)]="endDate" [showIcon]="true" [dateFormat]="'dd/mm/yy'"  placeholder="Fecha de fin"></p-calendar>
-
+  <p-calendar [(ngModel)]="calendarField1Value" [showIcon]="true" [dateFormat]="'dd/mm/yy'" (onSelect)="getDateStart($event)" placeholder="Fecha de inicio"></p-calendar>
+  <p-calendar [(ngModel)]="calendarField2Value" [showIcon]="true" [dateFormat]="'dd/mm/yy'" (onSelect)="getDateEnd($event)" placeholder="Fecha de fin"></p-calendar>
 </div>
+
 
        
 
