--- a/FRONT-END/src/app/modules/providers/providers.component.html
+++ b/FRONT-END/src/app/modules/providers/providers.component.html
@@ -26,7 +26,7 @@
       <div class="field-group">
         <div class="field"
           [ngClass]="{'error': isFieldInvalid('nitProveedor')}">
-          <label for="nitProveedor">NIT</label>
+          <label for="nitProveedor">NIT  <span style="color: red;">*</span></label>
           <input type="text" pInputText id="nitProveedor" formControlName="nitProveedor" maxlength="9" required autofocus />
           <small class="p-error"
             *ngIf="isFieldInvalid('nitProveedor')">
@@ -36,7 +36,7 @@
 
         <div class="field"
           [ngClass]="{'error': isFieldInvalid('nombreProveedor')}">
-          <label for="nombreProveedor">Nombre</label>
+          <label for="nombreProveedor">Nombre  <span style="color: red;">*</span></label>
           <input type="text" pInputText id="nombreProveedor" formControlName="nombreProveedor" required autofocus />
           <small class="p-error"
             *ngIf="isFieldInvalid('nombreProveedor')">
@@ -48,7 +48,7 @@
       <div class="field-group">
         <div class="field"
           [ngClass]="{'error': isFieldInvalid('direccionProveedor')}">
-          <label for="direccionProveedor">Dirección</label>
+          <label for="direccionProveedor">Dirección  <span style="color: red;">*</span></label>
           <input type="text" pInputText id="direccionProveedor" formControlName="direccionProveedor" required autofocus />
           <small class="p-error"
             *ngIf="isFieldInvalid('direccionProveedor')">
@@ -58,7 +58,7 @@
 
         <div class="field"
           [ngClass]="{'error':isFieldInvalid('telefonoProveedor')}">
-          <label for="telefonoProveedor">Teléfono</label>
+          <label for="telefonoProveedor">Teléfono  <span style="color: red;">*</span></label>
           <input type="text" pInputText id="telefonoProveedor" formControlName="telefonoProveedor" maxlength="10" autofocus />
           <small class="p-error"
             *ngIf="isFieldInvalid('telefonoProveedor')">
